--- a/src/app/traveller/traveller-offer/traveller-offer.component.html
+++ b/src/app/traveller/traveller-offer/traveller-offer.component.html
@@ -3,7 +3,7 @@
         <a style="font-size: 130%;" routerLink="/manager/traveller/dashboard" class="item" data-tab="first">Dashboard</a>
         <a style="font-size: 130%;" routerLink="/manager/traveller/trip" class="item" data-tab="second">Voyages</a>
         <a style="font-size: 130%;" routerLink="/manager/traveller/offer" class="item active" data-tab="third">Offres</a>
-        <a style="font-size: 130%;" routerLink="/manager/traveller" class="item" data-tab="fourth">Friends</a>
+        <a style="font-size: 130%;" routerLink="/manager/traveller/friend" class="item" data-tab="fourth">Friends</a>
     </div>
     <div class="ui hidden divider"></div>
     <div class="ui hidden divider"></div>
