--- a/src/app/traveller/traveller-trip/traveller-trip.component.html
+++ b/src/app/traveller/traveller-trip/traveller-trip.component.html
@@ -1,11 +1,8 @@
 <div class="ui container">
     <div class="ui pointing secondary menu">
-        <a style="font-size: 130%;" routerLink="/manager/traveller/dashboard" class="item"
-           data-tab="first">Dashboard</a>
-        <a style="font-size: 130%;" routerLink="/manager/traveller/trip" class="item active"
-           data-tab="second">Voyages</a>
+        <a style="font-size: 130%;" routerLink="/manager/traveller/dashboard" class="item" data-tab="first">Dashboard</a>
+        <a style="font-size: 130%;" routerLink="/manager/traveller/trip" class="item active" data-tab="second">Voyages</a>
         <a style="font-size: 130%;" routerLink="/manager/traveller/offer" class="item" data-tab="third">Offres</a>
-        <a style="font-size: 130%;" routerLink="/manager/traveller" class="item" data-tab="fourth">Friends</a>
     </div>
     <div class="ui hidden divider"></div>
     <div class="ui hidden divider"></div>
