--- a/src/app/menu-computer/menu-computer.component.html
+++ b/src/app/menu-computer/menu-computer.component.html
@@ -9,7 +9,7 @@
             <div class="item" suiPopup [popupTemplate]="popupTemplate" popupTrigger="outsideClick">
                 <div class="ui left labeled button" tabindex="0">
                     <a class="ui basic red right pointing label">
-                        23
+                        {{events.length}}
                     </a>
                     <div class="ui icon red button">
                         <i class="alarm outline icon"></i>
