--- a/src/app/traveller/traveller.component.html
+++ b/src/app/traveller/traveller.component.html
@@ -41,7 +41,7 @@
                     <div class="ui segment" suiTabContent="1" style="margin-bottom: 0px;">
                         <div class="ui relaxed divided list">
                             <div class="item" *ngFor="let msg of recieved">
-                                <i class="mail middle aligned icon"></i>
+                                <i class="large mail middle aligned icon"></i>
                                 <div class="content">
                                     <a class="header">{{msg.sender}} - {{msg.title}}</a>
                                     <div class="description">10 min</div>
