--- a/src/app/traveller/traveller.component.html
+++ b/src/app/traveller/traveller.component.html
@@ -33,6 +33,10 @@
         <div class="column">
             <div class="ui segments">
             <div class="ui segment">
+                <!--<button class="small ui right floated button">-->
+                <i class="right external icon" style="cursor: pointer;" routerLink="/manager/mail"></i>
+                    <!--Mails-->
+                <!--</button>-->
                 <b>Messages récents</b>
             </div>
             <div class="ui segment">
