add img for offer details

--- a/src/app/hoster/hoster.component.html
+++ b/src/app/hoster/hoster.component.html
@@ -113,7 +113,7 @@
     <div class="one column row">
         <div class="column">
             <div class="ui segment">
-                <h1 class="ui header">Listes de vos adresses</h1>
+                <h1 class="ui header">Listes de vos annonces</h1>
                 <div class="ui one cards">
                     <div class="card">
                         <div class="content">
